<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_menu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context="com.game.thathinh.MenuActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="60sp"
        android:gravity="center_horizontal"
        android:paddingTop="40dp"
        android:paddingBottom="25dp"
        android:textColor="#000000"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instruction"
        android:textSize="40sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/instructDes"
        android:textSize="25sp"
        android:padding="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="5dp">

        <ImageView
            android:layout_width="55dp"
            android:layout_height="35dp"
            android:src="@drawable/note2"
            android:paddingLeft="5dp"
            android:paddingEnd="5dp"
            android:paddingRight="5dp"
            android:paddingStart="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thinh"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="65dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:padding="5dp">

        <ImageView
            android:layout_width="45dp"
            android:layout_height="60dp"
            android:src="@drawable/girl_color"
            android:paddingRight="2dp"
            android:paddingLeft="2dp"
            android:paddingStart="2dp"
            android:paddingEnd="2dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/girl"
            android:textSize="20sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goodLuck"
        android:textSize="25sp"
        android:paddingTop="10dp"
        android:paddingBottom="30dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:text="@string/play"
        android:textSize="25sp"
        android:onClick="play"/>


</LinearLayout>
